Cabal-Version:      2.4
Name:               context-examples
Version:            0.1.0
Author:              Vinit James
Maintainer:          vinit.james24@gmail.com
Build-Type:          Simple
Copyright:           © 2021 VinitJames
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     BoolPairRedeemerScript
  
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
					 , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
